@@ -16,6 +16,8 @@ Core and Builtins
 Library
 -------
 
+- tracemalloc: Fix slicing traces and fix slicing a traceback.
+
 - Issue #20354: Fix an alignment issue in the tracemalloc module on 64-bit
   platforms. Bug seen on 64-bit Linux when using "make profile-opt".
 
